--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,6 +10,6 @@
       "@/*":["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "../../packages/types/src/types"],
   "references": [{ "path": "../../packages/types" }]
 }
