--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "types",
+  "name": "@virtualroom/types",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
