--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,7 @@
         "isolatedModules": true,
         "baseUrl": ".",
         "paths": {
-            "types": [
+            "@virtualroom/types": [
                 "packages/types/src"
             ]
         }
