--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,22 +15,24 @@
   "type": "module",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
+    "@virtualroom/types": "*",
     "dotenv": "^16.5.0",
     "install": "^0.13.0",
     "npm": "^11.4.0",
     "prettier": "^3.5.3",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
-    "@virtualroom/types": "*"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   }
