--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
+    "@types/node-cron": "^3.0.11",
     "@types/socket.io": "^3.0.1",
     "@virtualroom/types": "*",
     "dotenv": "^16.5.0",
@@ -36,6 +37,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.1.1",
     "socket.io": "^4.8.1"
   }
 }
