--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-player": "^2.16.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
