--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
     "@types/node-cron": "^3.0.11",
+    "@types/passport-github2": "^1.2.9",
     "@types/socket.io": "^3.0.1",
     "@virtualroom/types": "*",
     "dotenv": "^16.5.0",
@@ -33,11 +34,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.1.1",
+    "passport-github2": "^0.1.12",
     "socket.io": "^4.8.1"
   }
 }
